--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ tunnel: jenkins-tunnel
 credentials-file: /etc/cloudflared/jenkins-tunnel.json
 
 ingress:
-  - hostname: jenkins.rising-shop-dg.com
+  - hostname: your_domain_name
     service: http://host.docker.internal:8080
     # originRequest:
     #   access:
